--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAMES HERE"
+title: "Changes of international students in the U.S. around the epidemic"
+author: "Jiayuan Zhou, Wenqi Yu"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 ---
