--- a/04-missing.Rmd
+++ b/04-missing.Rmd
@@ -1,12 +1,9 @@
 # Missing values
 
-## still working on comments
-
 ```{r, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-options(width = 300)
+options(width = 200)
 ```
-
 
 ```{r, message=FALSE, include=FALSE}
 library(readxl)
@@ -16,8 +13,89 @@ library(stringr)
 library(ggpubr)
 ```
 
+```{r}
+library(redav)
+```
+
+```{r,include=FALSE}
+projdata <- read_excel("Census_All-Places-of-Origin_OD21.xlsx", 
+                       col_types = c("numeric", "text", "numeric", 
+                                     "numeric", "numeric", "numeric", "numeric", 
+                                     "numeric", "numeric", "numeric", "numeric", "numeric", 
+                                     "numeric", "numeric", "numeric", "numeric", "numeric", 
+                                     "numeric", "numeric", "numeric", "numeric", "numeric", 
+                                     "numeric", "numeric", "numeric", "numeric", "numeric", 
+                                     "numeric", "numeric", "numeric", "numeric", "numeric", 
+                                     "numeric", "numeric"),
+                       na = "-",
+                       col_names = T)
+names(projdata)[1] <- "Code of Origin"
+projdata <- projdata %>%
+  select(`Place of Origin`,`Code of Origin`, `1949/50`:`2020/21`)
+
+uselessRow <- rowSums(is.na(projdata)) == ncol(projdata)
+numNARow <- sum(uselessRow)
+projdata <- projdata[!uselessRow,] %>%
+  filter(!grepl(":",`Place of Origin`))
+
+sum(rowSums(is.na(projdata)) == ncol(projdata))
+
+projdata.re.state <- projdata %>%
+  filter(!grepl("[0-9][0-9]00", `Code of Origin`)) %>%
+  filter(!grepl("[A-Z]+$", `Place of Origin`)) %>% 
+  mutate(Continents = case_when(substring(`Code of Origin`, 1, 1) == 1 ~ "Africa",
+                                substring(`Code of Origin`, 1, 1) == 2 ~ "Asia",
+                                substring(`Code of Origin`, 1, 1) == 3 ~ "Europe",
+                                substring(`Code of Origin`, 1, 1) == 4 ~ "Latin America & Caribbean",
+                                substring(`Code of Origin`, 1, 1) == 5 ~ "Middle East",
+                                substring(`Code of Origin`, 1, 1) == 6 ~ "North America",
+                                substring(`Code of Origin`, 1, 1) == 7 ~ "Oceania",
+                                `Place of Origin` == "Stateless" ~ "Unknown State"
+  )
+  )
+
+projdata.re.state[projdata.re.state$`Place of Origin` 
+                  == "Bermuda",]$Continents <- "Latin America & Caribbean"
+
+temp.data <- projdata.re.state %>%
+  filter(grepl("[0-9]999", `Code of Origin`) | is.na(`Code of Origin`))
+
+temp.data.unsp <- temp.data %>%
+  filter(grepl("Unspecified",`Place of Origin`) ) %>%
+  mutate(Continents = case_when(grepl("Africa",`Place of Origin`) ~ "Africa",
+                                grepl("Asia",`Place of Origin`) ~ "Asia",
+                                grepl("Europe",`Place of Origin`) ~ "Europe",
+                                grepl("Latin America & Caribbean",`Place of Origin`) ~ "Latin America & Caribbean",
+                                grepl("South America",`Place of Origin`) ~ "Latin America & Caribbean",
+                                grepl("Caribbean",`Place of Origin`) ~ "Latin America & Caribbean",
+                                grepl("Mexico",`Place of Origin`) ~ "Latin America & Caribbean",
+                                grepl("Middle East",`Place of Origin`) ~ "Middle East",
+                                grepl("North America",`Place of Origin`) ~ "North America",
+                                grepl("Pacific",`Place of Origin`) ~ "Oceania"
+  )
+  ) %>%
+  group_by(Continents) %>%
+  summarize(.,across(where(is.numeric), ~sum(.x, na.rm = T))) %>%
+  mutate(`Place of Origin` = paste(Continents, "Unspecified", sep = ", ")) %>%
+  select(`Place of Origin`, `Code of Origin`, `1949/50`:`2020/21`, Continents)
+
+temp.data.fna <- temp.data  %>%
+  filter(!grepl("Unspecified",`Place of Origin`) ) %>%
+  mutate(Continents = case_when(grepl("Former",`Place of Origin`) ~ "Europe",
+                                grepl("Serbia",`Place of Origin`) ~ "Europe",
+                                grepl("Antilles",`Place of Origin`) ~ "Latin America & Caribbean",
+                                grepl("Sahara",`Place of Origin`) ~ "Africa"
+  )
+  )
+
+df <- projdata.re.state %>%
+  filter(!grepl("Unspecified",`Place of Origin`) ) %>%
+  rows_update(temp.data.fna, by = "Place of Origin") %>%
+  rbind(., temp.data.unsp)
+```
 
 
+## still working on comments
 ```{r}
 # find which continents do not have na values
 
@@ -25,14 +103,18 @@ df.nabygroup <- df %>%
   group_by(Continents) %>%
   summarize_all(.funs = funs('NA' = sum(is.na(.))))
 
-
 non.na.index <- which(rowSums(df.nabygroup[2:ncol(df.nabygroup)]) == 0)
 
 Continents.non.na <- df.nabygroup[non.na.index,1]
-Continents.non.na
+
+knitr::kable(
+  Continents.non.na, booktabs = TRUE,
+  caption = 'A table of the first 4 rows of our final project data.'
+)
+```
 
 
-
+```{r}
 # draw NA pattern
 # rownames(df) <- df$`Place of Origin`
 states <- df %>%
@@ -59,13 +141,16 @@ ggplot(missing, aes(x = 2:ncol(states)-1, y = sum.na)) +
 
 
 
-
-
 ```{r, warning=FALSE}
 
-rownames(states) <- states$name
-states.na <- states %>%
-    filter(Continents == "Asia")
+states2 <- df %>%
+  setNames(.,c("name","code", substring(colnames(.)[3:34], 6, 7),"Cont.")) %>%
+    select("name","code", "50":"95", "Cont.")
+
+rownames(states2) <- states2$name
+
+states.na <- states2 %>%
+    filter(Cont. == "Asia") 
 
 result <- rowSums(is.na(states.na)) %>%
   sort(decreasing = TRUE)
