update the content

--- a/finalproj.Rmd
+++ b/finalproj.Rmd
@@ -1,3 +1,61 @@
+--- 
+title: "Changes of international students in the U.S. around the epidemic"
+author: "Jiayuan Zhou, Wenqi Yu"
+date: "`r Sys.Date()`"
+site: bookdown::bookdown_site
+---
+--- 
+title: "Changes of international students in the U.S. around the epidemic"
+author: "Jiayuan Zhou, Wenqi Yu"
+date: "`r Sys.Date()`"
+site: bookdown::bookdown_site
+---
+```{r include=FALSE, cache=FALSE}
+knitr::opts_chunk$set(
+  echo = FALSE,
+  message = FALSE,
+  warning = FALSE
+)
+```
+
+# Introduction
+
+
+<!--chapter:end:index.Rmd-->
+
+```{r include=FALSE, cache=FALSE}
+knitr::opts_chunk$set(
+  echo = FALSE,
+  message = FALSE,
+  warning = FALSE
+)
+```
+# Data sources
+
+
+<!--chapter:end:02-data.Rmd-->
+
+
+# Data transformation
+
+Placeholder
+
+
+## Read data
+## Cleaning
+### Remove the empty row and extra notes in data
+### Unified logic type of value and group
+## Data use for next few parts
+
+<!--chapter:end:03-cleaning.Rmd-->
+
+```{r include=FALSE, cache=FALSE}
+knitr::opts_chunk$set(
+  echo = FALSE,
+  message = FALSE,
+  warning = FALSE
+)
+```
 # Missing values
 
 ```{r, include=FALSE}
@@ -170,3 +228,42 @@ Some of the `Code of Origin` also have missing values, as they are unable to ide
 **Notes**: Before the 21st century, data were recorded every five years, and after 2000, data were recorded annually. Between considering the statistical difficulties due to the low level of technology at that time, we did not consider the data that were not recorded in the 20th century as missing value in this part.
 
 <br>
+
+<!--chapter:end:04-missing.Rmd-->
+
+```{r include=FALSE, cache=FALSE}
+knitr::opts_chunk$set(
+  echo = FALSE,
+  message = FALSE,
+  warning = FALSE
+)
+```
+# Results
+
+<!--chapter:end:05-results.Rmd-->
+
+```{r include=FALSE, cache=FALSE}
+knitr::opts_chunk$set(
+  echo = FALSE,
+  message = FALSE,
+  warning = FALSE
+)
+```
+# Interactive component
+
+
+
+<!--chapter:end:06-interactive.Rmd-->
+
+```{r include=FALSE, cache=FALSE}
+knitr::opts_chunk$set(
+  echo = FALSE,
+  message = FALSE,
+  warning = FALSE
+)
+```
+# Conclusion
+
+
+<!--chapter:end:07-conclusion.Rmd-->
+
