--- a/04-missing.Rmd
+++ b/04-missing.Rmd
@@ -98,6 +98,16 @@ df <- projdata.re.state %>%
   filter(!grepl("Unspecified",`Place of Origin`) ) %>%
   rows_update(temp.data.fna, by = "Place of Origin") %>%
   rbind(., temp.data.unsp)
+
+df.tidy <- df %>%
+pivot_longer(c("1949/50", "1954/55", "1959/60", "1964/65", "1969/70", "1974/75", "1979/80",
+               "1984/85", "1989/90", "1994/95", "1999/00", "2000/01", "2001/02", "2002/03",
+               "2003/04", "2004/05", "2005/06", "2006/07", "2007/08", "2008/09", "2009/10",
+               "2010/11", "2011/12", "2012/13", "2013/14", "2014/15", "2015/16", "2016/17",
+               "2017/18", "2018/19", "2019/20", "2020/21"), names_to = "Acdemic_year",
+             values_to = "student_numbers") %>%
+  mutate( century = case_when(Acdemic_year < "2000/01" ~ "20th century",
+                              Acdemic_year >= "2000/01" ~ "21th century") )
 ```
 
 
